[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "nessus-parser"
version = "0.1.0"
description = "CLI for parsing Nessus scans, managing validation playbooks, and tracking host-level validation results."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
nessus-parser = "nessus_parser.cli.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
nessus_parser = ["templates/*.html"]

